--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "vite": "^5.2.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -32,8 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.5",
-    "vite": "^5.0.8"
+    "prettier": "^3.2.5"
   },
   "dev": "concurrently 'vite' 'nodemon server.js'"
 }
