Change SERVER_PORT to PORT to conform Heroku configuration for dynamically assigned port

--- a/client/.env.template
+++ b/client/.env.template
@@ -7,4 +7,4 @@ NODE_ENV="development"
 MONGODB_URI=""
 
 # Express Server port (Do not change! Vite Config does not read this property accordingly)
-SERVER_PORT=3000
+PORT=3000
